BUGFIX: Radar layout issues in Firefox

--- a/src/client/css/styles.css
+++ b/src/client/css/styles.css
@@ -389,6 +389,8 @@ main#main .intro {
 
 svg {
     max-height: 95vh;
+    display: block;
+    margin: auto;
 }
 
 svg > g.segment {
